code: inspect pii extraction started, thesis: aol description added, renamed chapters

--- a/src/thesis_schneg/temporal_analysis.ipynb
+++ b/src/thesis_schneg/temporal_analysis.ipynb
@@ -18,16 +18,455 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2022 2021 2020 2019 2018 2017 2016 2015 2014 2013 2012 2011 2010 2009\n",
-      " 2008 2007 2006 2005 2004]\n",
-      "Index(['query', 'score', 'year'], dtype='object')\n"
+      "2004           query  score  year\n",
+      "450        free    100  2004\n",
+      "451      lyrics     66  2004\n",
+      "452     windows     47  2004\n",
+      "453       music     35  2004\n",
+      "454       yahoo     35  2004\n",
+      "455         dvd     35  2004\n",
+      "456         mp3     34  2004\n",
+      "457       games     33  2004\n",
+      "458         web     26  2004\n",
+      "459         msn     25  2004\n",
+      "460        news     24  2004\n",
+      "461        ebay     21  2004\n",
+      "462        test     21  2004\n",
+      "463       linux     20  2004\n",
+      "464     weather     18  2004\n",
+      "465        love     17  2004\n",
+      "466        sony     17  2004\n",
+      "467       crack     17  2004\n",
+      "468        java     17  2004\n",
+      "469       flash     17  2004\n",
+      "470        chat     16  2004\n",
+      "471     hotmail     16  2004\n",
+      "472   microsoft     16  2004\n",
+      "473  dictionary     14  2004\n",
+      "474      cheats     14  2004\n",
+      "2005           query  score  year\n",
+      "425        free    100  2005\n",
+      "426    download     77  2005\n",
+      "427      lyrics     73  2005\n",
+      "428       yahoo     43  2005\n",
+      "429         msn     36  2005\n",
+      "430       games     35  2005\n",
+      "431       music     34  2005\n",
+      "432         dvd     34  2005\n",
+      "433         map     32  2005\n",
+      "434         mp3     31  2005\n",
+      "435      google     27  2005\n",
+      "436        ebay     26  2005\n",
+      "437        news     25  2005\n",
+      "438     hotmail     23  2005\n",
+      "439        game     22  2005\n",
+      "440     weather     20  2005\n",
+      "441        auto     17  2005\n",
+      "442        chat     16  2005\n",
+      "443        sony     16  2005\n",
+      "444   microsoft     15  2005\n",
+      "445        jobs     14  2005\n",
+      "446        java     14  2005\n",
+      "447  dictionary     14  2005\n",
+      "448       nokia     13  2005\n",
+      "449       gmail     13  2005\n",
+      "2006          query  score  year\n",
+      "400       free    100  2006\n",
+      "401     lyrics     74  2006\n",
+      "402      yahoo     56  2006\n",
+      "403      video     51  2006\n",
+      "404     google     44  2006\n",
+      "405        msn     41  2006\n",
+      "406      games     39  2006\n",
+      "407       ebay     37  2006\n",
+      "408        map     33  2006\n",
+      "409    hotmail     32  2006\n",
+      "410    myspace     30  2006\n",
+      "411     videos     29  2006\n",
+      "412        mp3     27  2006\n",
+      "413       news     26  2006\n",
+      "414       game     24  2006\n",
+      "415    weather     24  2006\n",
+      "416      gmail     21  2006\n",
+      "417  messenger     17  2006\n",
+      "418       chat     17  2006\n",
+      "419  wikipedia     17  2006\n",
+      "420       sony     16  2006\n",
+      "421      nokia     16  2006\n",
+      "422    youtube     15  2006\n",
+      "423         hp     15  2006\n",
+      "424        bbc     14  2006\n",
+      "2007          query  score  year\n",
+      "375       free    100  2007\n",
+      "376    youtube     81  2007\n",
+      "377     lyrics     74  2007\n",
+      "378      yahoo     66  2007\n",
+      "379      video     59  2007\n",
+      "380     google     57  2007\n",
+      "381    myspace     48  2007\n",
+      "382      games     47  2007\n",
+      "383    hotmail     45  2007\n",
+      "384        msn     43  2007\n",
+      "385       ebay     43  2007\n",
+      "386   you tube     32  2007\n",
+      "387        map     31  2007\n",
+      "388      music     31  2007\n",
+      "389    weather     29  2007\n",
+      "390      gmail     29  2007\n",
+      "391  wikipedia     28  2007\n",
+      "392       news     28  2007\n",
+      "393        web     26  2007\n",
+      "394        mp3     24  2007\n",
+      "395       test     23  2007\n",
+      "396   facebook     20  2007\n",
+      "397      nokia     20  2007\n",
+      "398    torrent     20  2007\n",
+      "399     juegos     18  2007\n",
+      "2008          query  score  year\n",
+      "350    youtube    100  2008\n",
+      "351       free     80  2008\n",
+      "352        you     69  2008\n",
+      "353   facebook     60  2008\n",
+      "354      yahoo     56  2008\n",
+      "355     google     49  2008\n",
+      "356      games     39  2008\n",
+      "357    hotmail     38  2008\n",
+      "358        msn     34  2008\n",
+      "359       ebay     34  2008\n",
+      "360   you tube     34  2008\n",
+      "361    myspace     32  2008\n",
+      "362     videos     29  2008\n",
+      "363    weather     23  2008\n",
+      "364        map     21  2008\n",
+      "365      radio     21  2008\n",
+      "366     juegos     20  2008\n",
+      "367  wikipedia     20  2008\n",
+      "368       mail     19  2008\n",
+      "369      gmail     19  2008\n",
+      "370        web     18  2008\n",
+      "371        hi5     17  2008\n",
+      "372       test     17  2008\n",
+      "373       wiki     17  2008\n",
+      "374        bbc     16  2008\n",
+      "2009               query  score  year\n",
+      "325        facebook    100  2009\n",
+      "326         youtube     63  2009\n",
+      "327             you     36  2009\n",
+      "328           yahoo     33  2009\n",
+      "329          google     32  2009\n",
+      "330         hotmail     28  2009\n",
+      "331          lyrics     26  2009\n",
+      "332              tv     24  2009\n",
+      "333           games     21  2009\n",
+      "334             msn     18  2009\n",
+      "335            ebay     18  2009\n",
+      "336          videos     17  2009\n",
+      "337        you tube     14  2009\n",
+      "338          juegos     12  2009\n",
+      "339         myspace     12  2009\n",
+      "340         weather     11  2009\n",
+      "341           gmail     11  2009\n",
+      "342            wiki     11  2009\n",
+      "343             map     10  2009\n",
+      "344       wikipedia     10  2009\n",
+      "345         torrent      9  2009\n",
+      "346           jogos      9  2009\n",
+      "347             hi5      9  2009\n",
+      "348             web      8  2009\n",
+      "349  facebook login      8  2009\n",
+      "2010               query  score  year\n",
+      "300        facebook    100  2010\n",
+      "301         youtube     43  2010\n",
+      "302            free     28  2010\n",
+      "303             you     23  2010\n",
+      "304          google     22  2010\n",
+      "305         hotmail     20  2010\n",
+      "306           yahoo     20  2010\n",
+      "307  facebook login     10  2010\n",
+      "308             msn      9  2010\n",
+      "309           gmail      9  2010\n",
+      "310            news      8  2010\n",
+      "311            ebay      8  2010\n",
+      "312            game      8  2010\n",
+      "313            face      8  2010\n",
+      "314          juegos      7  2010\n",
+      "315        you tube      7  2010\n",
+      "316         weather      7  2010\n",
+      "317      yahoo mail      7  2010\n",
+      "318            wiki      6  2010\n",
+      "319       wikipedia      6  2010\n",
+      "320             map      6  2010\n",
+      "321           jogos      5  2010\n",
+      "322            maps      5  2010\n",
+      "323             bbc      5  2010\n",
+      "324      craigslist      4  2010\n",
+      "2011               query  score  year\n",
+      "275        facebook    100  2011\n",
+      "276         youtube     40  2011\n",
+      "277          google     25  2011\n",
+      "278            free     20  2011\n",
+      "279             you     19  2011\n",
+      "280         hotmail     19  2011\n",
+      "281           yahoo     17  2011\n",
+      "282           games     10  2011\n",
+      "283            mail      9  2011\n",
+      "284           gmail      8  2011\n",
+      "285            ebay      7  2011\n",
+      "286            face      7  2011\n",
+      "287            news      7  2011\n",
+      "288         weather      7  2011\n",
+      "289             msn      6  2011\n",
+      "290  facebook login      6  2011\n",
+      "291          juegos      6  2011\n",
+      "292             mp3      6  2011\n",
+      "293        you tube      5  2011\n",
+      "294         twitter      5  2011\n",
+      "295              fb      5  2011\n",
+      "296            maps      4  2011\n",
+      "297      yahoo mail      4  2011\n",
+      "298       wikipedia      4  2011\n",
+      "299         samsung      4  2011\n",
+      "2012               query  score  year\n",
+      "250        facebook    100  2012\n",
+      "251         youtube     34  2012\n",
+      "252          google     24  2012\n",
+      "253         hotmail     18  2012\n",
+      "254             you     16  2012\n",
+      "255           yahoo     16  2012\n",
+      "256            mail      9  2012\n",
+      "257           gmail      8  2012\n",
+      "258          videos      8  2012\n",
+      "259             mp3      7  2012\n",
+      "260           games      7  2012\n",
+      "261              fb      7  2012\n",
+      "262            ebay      6  2012\n",
+      "263            news      6  2012\n",
+      "264            face      6  2012\n",
+      "265         twitter      6  2012\n",
+      "266         weather      5  2012\n",
+      "267         samsung      5  2012\n",
+      "268          juegos      5  2012\n",
+      "269          amazon      5  2012\n",
+      "270  facebook login      4  2012\n",
+      "271          mobile      4  2012\n",
+      "272            maps      4  2012\n",
+      "273      yahoo mail      4  2012\n",
+      "274      craigslist      4  2012\n",
+      "2013               query  score  year\n",
+      "225        facebook    100  2013\n",
+      "226          google     32  2013\n",
+      "227         youtube     31  2013\n",
+      "228         hotmail     16  2013\n",
+      "229            free     15  2013\n",
+      "230             you     14  2013\n",
+      "231           yahoo     14  2013\n",
+      "232            mail      9  2013\n",
+      "233              fb      8  2013\n",
+      "234           gmail      8  2013\n",
+      "235            news      8  2013\n",
+      "236             mp3      7  2013\n",
+      "237            ebay      6  2013\n",
+      "238            face      6  2013\n",
+      "239           games      6  2013\n",
+      "240         twitter      6  2013\n",
+      "241         weather      6  2013\n",
+      "242            game      5  2013\n",
+      "243          amazon      5  2013\n",
+      "244      craigslist      5  2013\n",
+      "245         samsung      5  2013\n",
+      "246            maps      4  2013\n",
+      "247  facebook login      4  2013\n",
+      "248      yahoo mail      4  2013\n",
+      "249       translate      3  2013\n",
+      "2014           query  score  year\n",
+      "200    facebook    100  2014\n",
+      "201     youtube     47  2014\n",
+      "202      google     41  2014\n",
+      "203     hotmail     18  2014\n",
+      "204        free     17  2014\n",
+      "205         you     17  2014\n",
+      "206       yahoo     14  2014\n",
+      "207       gmail     13  2014\n",
+      "208          fb     12  2014\n",
+      "209         mp3     11  2014\n",
+      "210      videos     10  2014\n",
+      "211        mail     10  2014\n",
+      "212        news     10  2014\n",
+      "213     weather      8  2014\n",
+      "214      amazon      7  2014\n",
+      "215        ebay      7  2014\n",
+      "216        maps      7  2014\n",
+      "217        face      6  2014\n",
+      "218  craigslist      6  2014\n",
+      "219     twitter      6  2014\n",
+      "220   translate      5  2014\n",
+      "221         map      5  2014\n",
+      "222          go      4  2014\n",
+      "223  yahoo mail      4  2014\n",
+      "224         bbc      4  2014\n",
+      "2015           query  score  year\n",
+      "175    facebook    100  2015\n",
+      "176     youtube     53  2015\n",
+      "177      google     52  2015\n",
+      "178         you     21  2015\n",
+      "179     hotmail     17  2015\n",
+      "180       gmail     16  2015\n",
+      "181       yahoo     14  2015\n",
+      "182          fb     13  2015\n",
+      "183        news     13  2015\n",
+      "184        mail     12  2015\n",
+      "185     weather     10  2015\n",
+      "186      amazon      9  2015\n",
+      "187        game      8  2015\n",
+      "188        maps      8  2015\n",
+      "189        ebay      7  2015\n",
+      "190   translate      7  2015\n",
+      "191       games      7  2015\n",
+      "192  craigslist      7  2015\n",
+      "193        face      7  2015\n",
+      "194     twitter      6  2015\n",
+      "195   instagram      5  2015\n",
+      "196          go      5  2015\n",
+      "197          as      5  2015\n",
+      "198          dr      5  2015\n",
+      "199         bbc      5  2015\n",
+      "2016               query  score  year\n",
+      "150        facebook    100  2016\n",
+      "151         youtube     49  2016\n",
+      "152          google     46  2016\n",
+      "153             you     24  2016\n",
+      "154             mp3     15  2016\n",
+      "155           gmail     15  2016\n",
+      "156            news     15  2016\n",
+      "157              fb     14  2016\n",
+      "158         hotmail     13  2016\n",
+      "159         weather     12  2016\n",
+      "160           yahoo     12  2016\n",
+      "161            mail     10  2016\n",
+      "162          amazon     10  2016\n",
+      "163              go      9  2016\n",
+      "164          iphone      9  2016\n",
+      "165             hot      8  2016\n",
+      "166       translate      8  2016\n",
+      "167  facebook login      8  2016\n",
+      "168      craigslist      7  2016\n",
+      "169            face      7  2016\n",
+      "170            ebay      7  2016\n",
+      "171            maps      6  2016\n",
+      "172       instagram      6  2016\n",
+      "173         twitter      6  2016\n",
+      "174              вк      6  2016\n",
+      "2017               query  score  year\n",
+      "125        facebook    100  2017\n",
+      "126         youtube     62  2017\n",
+      "127          google     55  2017\n",
+      "128             you     32  2017\n",
+      "129            news     22  2017\n",
+      "130         weather     21  2017\n",
+      "131             mp3     19  2017\n",
+      "132           gmail     18  2017\n",
+      "133         hotmail     16  2017\n",
+      "134              fb     15  2017\n",
+      "135          amazon     14  2017\n",
+      "136           yahoo     13  2017\n",
+      "137       translate     12  2017\n",
+      "138       instagram     10  2017\n",
+      "139      craigslist      9  2017\n",
+      "140            maps      8  2017\n",
+      "141            ebay      8  2017\n",
+      "142  facebook login      8  2017\n",
+      "143              as      7  2017\n",
+      "144            face      7  2017\n",
+      "145         twitter      7  2017\n",
+      "146       traductor      7  2017\n",
+      "147              вк      6  2017\n",
+      "148        whatsapp      6  2017\n",
+      "149             bbc      6  2017\n",
+      "2018                 query  score  year\n",
+      "100          facebook    100  2018\n",
+      "101           youtube     76  2018\n",
+      "102            google     75  2018\n",
+      "103               you     43  2018\n",
+      "104           weather     38  2018\n",
+      "105              news     31  2018\n",
+      "106            amazon     22  2018\n",
+      "107             gmail     20  2018\n",
+      "108         instagram     19  2018\n",
+      "109           hotmail     18  2018\n",
+      "110         translate     18  2018\n",
+      "111                fb     14  2018\n",
+      "112              game     14  2018\n",
+      "113             yahoo     13  2018\n",
+      "114              maps     11  2018\n",
+      "115             meteo     11  2018\n",
+      "116                as     11  2018\n",
+      "117            tiempo     11  2018\n",
+      "118         traductor     10  2018\n",
+      "119          whatsapp     10  2018\n",
+      "120           twitter     10  2018\n",
+      "121            погода      9  2018\n",
+      "122              ebay      9  2018\n",
+      "123  google translate      9  2018\n",
+      "124        craigslist      9  2018\n",
+      "2019         query  score  year\n",
+      "75   facebook    100  2019\n",
+      "76     google     88  2019\n",
+      "77    youtube     82  2019\n",
+      "78      video     72  2019\n",
+      "79        you     60  2019\n",
+      "80    weather     48  2019\n",
+      "81       news     40  2019\n",
+      "82     amazon     32  2019\n",
+      "83  instagram     28  2019\n",
+      "84  translate     27  2019\n",
+      "85      gmail     25  2019\n",
+      "86    hotmail     21  2019\n",
+      "87      yahoo     17  2019\n",
+      "88    samsung     17  2019\n",
+      "89       sexy     17  2019\n",
+      "90         go     16  2019\n",
+      "91   whatsapp     16  2019\n",
+      "92      meteo     16  2019\n",
+      "93    twitter     14  2019\n",
+      "94         as     14  2019\n",
+      "95       maps     14  2019\n",
+      "96     tiempo     13  2019\n",
+      "97  traductor     13  2019\n",
+      "98        map     13  2019\n",
+      "99     погода     13  2019\n",
+      "2020            query  score  year\n",
+      "50        google    100  2020\n",
+      "51      facebook     86  2020\n",
+      "52       youtube     80  2020\n",
+      "53           you     67  2020\n",
+      "54         video     62  2020\n",
+      "55   coronavirus     56  2020\n",
+      "56          news     51  2020\n",
+      "57       weather     50  2020\n",
+      "58        amazon     38  2020\n",
+      "59     translate     34  2020\n",
+      "60     instagram     30  2020\n",
+      "61        videos     27  2020\n",
+      "62      whatsapp     27  2020\n",
+      "63           web     27  2020\n",
+      "64         gmail     27  2020\n",
+      "65           mp3     20  2020\n",
+      "66     traductor     20  2020\n",
+      "67       twitter     19  2020\n",
+      "68         clima     18  2020\n",
+      "69       hotmail     17  2020\n",
+      "70       netflix     17  2020\n",
+      "71            as     17  2020\n",
+      "72         yahoo     16  2020\n",
+      "73  whatsapp web     16  2020\n",
+      "74        tiempo     16  2020\n"
      ]
     }
    ],
@@ -36,8 +475,11 @@
     "\n",
     "annual_google_trends = pd.read_csv(\"/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/google_trends/google_trends_total.csv\")\n",
     "\n",
-    "print(annual_google_trends['year'].unique())\n",
-    "print(annual_google_trends.columns)"
+    "# print(annual_google_trends['year'].unique())\n",
+    "# print(annual_google_trends.columns)\n",
+    "# for i in range(2004, 2021):\n",
+    "    # print(i, annual_google_trends[annual_google_trends['year'] == i])\n",
+    "# print(annual_google_trends)"
    ]
   },
   {
