--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -180,7 +180,7 @@ pages = {292-301},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@inproceedings{pass:06,
+@inproceedings{pass:2006,
   author       = {Greg Pass and
                   Abdur Chowdhury and
                   Cayley Torgeson},
@@ -228,4 +228,14 @@ year={2020}
   author={Overwijk, Arnold and Xiong, Chenyan and Liu, Xiao and VandenBerg, Cameron and Callan, Jamie},
   journal={arXiv preprint arXiv:2211.15848},
   year={2022}
+}
+
+@misc{macavaney:2022,
+      title={Reproducing Personalised Session Search over the AOL Query Log}, 
+      author={Sean MacAvaney and Craig Macdonald and Iadh Ounis},
+      year={2022},
+      eprint={2201.08622},
+      archivePrefix={arXiv},
+      primaryClass={cs.IR},
+      url={https://arxiv.org/abs/2201.08622}, 
 }
