--- a/thesis/thesis.tex
+++ b/thesis/thesis.tex
@@ -114,12 +114,12 @@ This is the \LaTeX{} template for Bachelor and Master theses at Webis. This temp
 % optional: list of symbols/notation (e.g., using the nomencl package) but usually not needed
 \end{frontmatter}
 
-\include{chapter1}
-\include{chapter2}
-\include{chapter3}
-\include{chapter4}
-\include{chapter5}
-\include{chapter6}
+\include{introduction}
+\include{background}
+\include{datasets}
+\include{analysis}
+\include{evaluation}
+\include{conclussion}
 
 \include{appendixA}
 
