thesis: background, code: presidio outsourced, temporal analysis progressed,

--- a/src/thesis_schneg/temporal_analysis.ipynb
+++ b/src/thesis_schneg/temporal_analysis.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Google Trends in AQL\n",
+    "\n",
     "In this notebook, we inspect the most prominent queries with respect to certain time windows and compare them to the most frequent queries from google in that same time window.\n",
+    "### 1. Annual Analysis\n",
     "First, we look at the most frequent queries in a year. We examine the years from 1999 up to 2022."
    ]
   },
@@ -636,6 +638,74 @@
    "source": [
     "As we can see, there are only few intersections in the annual top 25 queries of google and the aql queries. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Monthly Analysis\n",
+    "\n",
+    "We have loaded the top 25 queries of each month from 2005 until 2022 from google. In this analysis we want to compare the actual courses of query frequencies from the AQL and Google. For this, we first need to make a selection which queries we want for that analysis. We take the top 25 queries of the most frequent monthly queries from google. This set is obtained by applying [reciprocal rank fusion](https://dl.acm.org/doi/abs/10.1145/1571941.1572114) to the list of the top 25 monthly queries from 2005 - 2022 by google. \n",
+    "First, we load google trends data:  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               query  score  rank\n",
+      "0           facebook    100     1\n",
+      "1             google     51     2\n",
+      "2            youtube     49     3\n",
+      "3                you     29     4\n",
+      "4               news     17     5\n",
+      "...              ...    ...   ...\n",
+      "5695  facebook login      8    21\n",
+      "5696              as      8    22\n",
+      "5697            ebay      8    23\n",
+      "5698              dr      8    24\n",
+      "5699           apple      8    25\n",
+      "\n",
+      "[5700 rows x 3 columns]\n",
+      "(5700, 3)\n",
+      "['google', 'yahoo', 'weather', 'youtube', 'hotmail', 'facebook', 'gmail', 'news', 'you', 'ebay', 'amazon', 'games', 'free', 'twitter', 'translate', 'mp3', 'maps', 'msn', 'fb', 'mail', 'instagram', 'map', 'face', 'video', 'juegos', 'craigslist', 'facebook login', 'lyrics', 'game', 'traductor', 'you tube', 'as', 'whatsapp', 'videos', 'wikipedia', 'yahoo mail', 'myspace', 'tiempo', 'samsung', 'bbc', 'meteo', 'web', 'music', 'nokia', 'погода', 'clima', 'chat', 'sony', 'download', 'go', 'google translate', 'wiki', 'netflix', 'hot', 'dictionary', 'messenger', 'test', 'whatsapp web', 'satta', 'torrent', 'microsoft', 'radio', 'movies', 'вк', 'hi5', 'java', 'tv', 'jobs', 'mobile', 'halloween', 'iphone', 'linux', 'coronavirus', 'jogos', 'flash', 'world cup', 'apple', 'earth', 'ipl', 'dvd', 'corona', 'cricbuzz', 'web whatsapp', 'hp', 'my', 'wetter', 'nba', 'cheats', 'hotmail.com', 'friv', 'dr', 'fifa', 'trump', 'love', 'christmas', 'black friday', 'olympics', 'covid', 'walmart', 'www']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "\n",
+    "# this function groups the data by query and computes the reciprocal rank fusion score for each query \n",
+    "def get_rrf_score(data: pd.DataFrame) -> pd.DataFrame:\n",
+    "    data = data.groupby('query').agg(rrf_score=pd.NamedAgg(column='rank', aggfunc=lambda x: np.sum(1/(60+x)))).reset_index()\n",
+    "    return data.sort_values('rrf_score', ascending=False)\n",
+    "\n",
+    "base_path = Path(\"/mnt/ceph/storage/data-in-progress/data-teaching/theses/thesis-schneg/google_trends/monthly\")\n",
+    "\n",
+    "data = pd.DataFrame()\n",
+    "for path in base_path.iterdir():\n",
+    "    if path.is_file():\n",
+    "        df = pd.read_csv(path)\n",
+    "        data = pd.concat([data, df])\n",
+    "\n",
+    "print(data)\n",
+    "print(data.shape)\n",
+    "print(list(get_rrf_score(data)['query'].head(100)))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we compare the time series of the top 25 monthly google queries over a large time span to the respective frequencies of those queries in the AQL over the same time span."
+   ]
   }
  ],
  "metadata": {
@@ -654,7 +724,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0rc1"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
