--- a/thesis/literature.bib
+++ b/thesis/literature.bib
@@ -135,17 +135,57 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
+
+
 @inproceedings{chen:2024,
-author = {Chen, Qi and Geng, Xiubo and Rosset, Corby and Buractaon, Carolyn and Lu, Jingwen and Shen, Tao and Zhou, Kun and Xiong, Chenyan and Gong, Yeyun and Bennett, Paul and Craswell, Nick and Xie, Xing and Yang, Fan and Tower, Bryan and Liu, Zheng and Li, Mingqin and Liu, Chuanjie and Li, Jason (Zengzhong) and Majumder, Rangan and Neville, Jennifer and Simhadri, Harsha and Varma, Manik and Wang, Yujing and Yang, Linjun and Yang, Mao and Zhang, Ce},
-title = {MS MARCO Web Search: A Large-scale Information-rich Web Dataset with Millions of Real Click Labels},
-organization = {ACM},
-booktitle = {2024 The Web Conference},
-year = {2024},
-month = {May},
-publisher = {WWW '24: Companion Proceedings of the ACM on Web Conference 2024},
-url = {https://www.microsoft.com/en-us/research/publication/ms-marco-web-search-a-large-scale-information-rich-web-dataset-with-millions-of-real-click-labels/},
-pages = {292-301},
+  author       = {Qi Chen and
+                  Xiubo Geng and
+                  Corby Rosset and
+                  Carolyn Buractaon and
+                  Jingwen Lu and
+                  Tao Shen and
+                  Kun Zhou and
+                  Chenyan Xiong and
+                  Yeyun Gong and
+                  Paul N. Bennett and
+                  Nick Craswell and
+                  Xing Xie and
+                  Fan Yang and
+                  Bryan Tower and
+                  Nikhil Rao and
+                  Anlei Dong and
+                  Wenqi Jiang and
+                  Zheng Liu and
+                  Mingqin Li and
+                  Chuanjie Liu and
+                  Zengzhong Li and
+                  Rangan Majumder and
+                  Jennifer Neville and
+                  Andy Oakley and
+                  Knut Magne Risvik and
+                  Harsha Vardhan Simhadri and
+                  Manik Varma and
+                  Yujing Wang and
+                  Linjun Yang and
+                  Mao Yang and
+                  Ce Zhang},
+  editor       = {Tat{-}Seng Chua and
+                  Chong{-}Wah Ngo and
+                  Roy Ka{-}Wei Lee and
+                  Ravi Kumar and
+                  Hady W. Lauw},
+  title        = {{MS} {MARCO} Web Search: {A} Large-scale Information-rich Web Dataset
+                  with Millions of Real Click Labels},
+  booktitle    = {Companion Proceedings of the {ACM} on Web Conference 2024, {WWW} 2024,
+                  Singapore, Singapore, May 13-17, 2024},
+  pages        = {292--301},
+  publisher    = {{ACM}},
+  year         = {2024},
+  url          = {https://doi.org/10.1145/3589335.3648327},
+  doi          = {10.1145/3589335.3648327},
 }
+
+
 
 @article{cooper:2008,
   author       = {Alissa Cooper},
@@ -157,9 +197,6 @@ pages = {292-301},
   year         = {2008},
   url          = {https://doi.org/10.1145/1409220.1409222}, 
   doi          = {10.1145/1409220.1409222},
-  timestamp    = {Mon, 11 May 2020 15:44:45 +0200},
-  biburl       = {https://dblp.org/rec/journals/tweb/Cooper08.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{agosti:2012,
@@ -168,16 +205,13 @@ pages = {292-301},
                   Giorgio Maria Di Nunzio},
   title        = {Web log analysis: a review of a decade of studies about information
                   acquisition, inspection and interpretation of user interaction},
-  journal      = {Data Min. Knowl. Discov.},
+  journal      = {Data Mining and Knowledge Discovery},
   volume       = {24},
   number       = {3},
   pages        = {663--696},
   year         = {2012},
   url          = {https://doi.org/10.1007/s10618-011-0228-8}, 
   doi          = {10.1007/S10618-011-0228-8},
-  timestamp    = {Sun, 02 Jun 2019 21:01:24 +0200},
-  biburl       = {https://dblp.org/rec/journals/datamine/AgostiCN12.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @inproceedings{pass:2006,
@@ -195,9 +229,6 @@ pages = {292-301},
   year         = {2006},
   url          = {https://doi.org/10.1145/1146847.1146848}, 
   doi          = {10.1145/1146847.1146848},
-  timestamp    = {Tue, 06 Nov 2018 16:57:28 +0100},
-  biburl       = {https://dblp.org/rec/conf/infoscale/PassCT06.bib},
-  bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
 @article{panaretos:2019,
@@ -238,4 +269,405 @@ year={2020}
       archivePrefix={arXiv},
       primaryClass={cs.IR},
       url={https://arxiv.org/abs/2201.08622}, 
+}
+
+@inproceedings{cormack:2009,
+  author       = {Gordon V. Cormack and
+                  Charles L. A. Clarke and
+                  Stefan B{\"{u}}ttcher},
+  editor       = {James Allan and
+                  Javed A. Aslam and
+                  Mark Sanderson and
+                  ChengXiang Zhai and
+                  Justin Zobel},
+  title        = {Reciprocal rank fusion outperforms condorcet and individual rank learning
+                  methods},
+  booktitle    = {Proceedings of the 32nd Annual International {ACM} {SIGIR} Conference
+                  on Research and Development in Information Retrieval, {SIGIR} 2009,
+                  Boston, MA, USA, July 19-23, 2009},
+  pages        = {758--759},
+  publisher    = {{ACM}},
+  year         = {2009},
+  url          = {https://doi.org/10.1145/1571941.1572114},
+  doi          = {10.1145/1571941.1572114},
+}
+
+
+@article{spink:2001,
+author = {Spink, Amanda and Wolfram, Dietmar and Jansen, Major B. J. and Saracevic, Tefko},
+title = {Searching the web: The public and their queries},
+journal = {Journal of the American Society for Information Science and Technology},
+volume = {52},
+number = {3},
+pages = {226-234},
+doi = {https://doi.org/10.1002/1097-4571(2000)9999:9999<::AID-ASI1591>3.0.CO;2-R},
+url = {https://asistdl.onlinelibrary.wiley.com/doi/abs/10.1002/1097-4571%282000%299999%3A9999%3C%3A%3AAID-ASI1591%3E3.0.CO%3B2-R},
+eprint = {https://asistdl.onlinelibrary.wiley.com/doi/pdf/10.1002/1097-4571%282000%299999%3A9999%3C%3A%3AAID-ASI1591%3E3.0.CO%3B2-R},
+year = {2001}
+}
+
+@article{silverstein:1999,
+  author       = {Craig Silverstein and
+                  Monika Henzinger and
+                  Hannes Marais and
+                  Michael Moricz},
+  title        = {Analysis of a Very Large Web Search Engine Query Log},
+  journal      = {{SIGIR} Forum},
+  volume       = {33},
+  number       = {1},
+  pages        = {6--12},
+  year         = {1999},
+  url          = {https://doi.org/10.1145/331403.331405},
+  doi          = {10.1145/331403.331405},
+  biburl       = {https://dblp.org/rec/journals/sigir/SilversteinHMM99.bib},
+}
+
+@article{jansen:2001,
+  author       = {Dietmar Wolfram and
+                  Amanda Spink and
+                  Bernard J. Jansen and
+                  Tefko Saracevic},
+  title        = {Vox populi: The public searching of the web},
+  journal      = {Journal of the Association for Information Science and Technology},
+  volume       = {52},
+  number       = {12},
+  pages        = {1073--1074},
+  year         = {2001},
+  url          = {https://doi.org/10.1002/asi.1157},
+  doi          = {10.1002/ASI.1157},
+}
+
+
+
+@article{jansen:2000,
+  author       = {Bernard J. Jansen and
+                  Amanda Spink and
+                  Tefko Saracevic},
+  title        = {Real life, real users, and real needs: a study and analysis of user
+                  queries on the web},
+  journal      = {Information Processing and Management},
+  volume       = {36},
+  number       = {2},
+  pages        = {207--227},
+  year         = {2000},
+  url          = {https://doi.org/10.1016/S0306-4573(99)00056-4},
+  doi          = {10.1016/S0306-4573(99)00056-4},
+}
+
+@article{broder:2002,
+  author       = {Andrei Z. Broder},
+  title        = {A taxonomy of web search},
+  journal      = {{SIGIR} Forum},
+  volume       = {36},
+  number       = {2},
+  pages        = {3--10},
+  year         = {2002},
+  url          = {https://doi.org/10.1145/792550.792552},
+  doi          = {10.1145/792550.792552},
+}
+
+@inproceedings{alexander:2022,
+  author       = {Daria Alexander and
+                  Wojciech Kusa and
+                  Arjen P. de Vries},
+  editor       = {Enrique Amig{\'{o}} and
+                  Pablo Castells and
+                  Julio Gonzalo and
+                  Ben Carterette and
+                  J. Shane Culpepper and
+                  Gabriella Kazai},
+  title        = {{ORCAS-I:} Queries Annotated with Intent using Weak Supervision},
+  booktitle    = {{SIGIR} '22: The 45th International {ACM} {SIGIR} Conference on Research
+                  and Development in Information Retrieval, Madrid, Spain, July 11 -
+                  15, 2022},
+  pages        = {3057--3066},
+  publisher    = {{ACM}},
+  year         = {2022},
+  url          = {https://doi.org/10.1145/3477495.3531737},
+  doi          = {10.1145/3477495.3531737},
+}
+
+@inproceedings{kang:2003,
+  author       = {In{-}Ho Kang and
+                  Gil{-}Chang Kim},
+  editor       = {Charles L. A. Clarke and
+                  Gordon V. Cormack and
+                  Jamie Callan and
+                  David Hawking and
+                  Alan F. Smeaton},
+  title        = {Query type classification for web document retrieval},
+  booktitle    = {{SIGIR} 2003: Proceedings of the 26th Annual International {ACM} {SIGIR}
+                  Conference on Research and Development in Information Retrieval, July
+                  28 - August 1, 2003, Toronto, Canada},
+  pages        = {64--71},
+  publisher    = {{ACM}},
+  year         = {2003},
+  url          = {https://doi.org/10.1145/860435.860449},
+  doi          = {10.1145/860435.860449},
+}
+
+
+@inproceedings{beitzel:2005,
+  author       = {Steven M. Beitzel and
+                  Eric C. Jensen and
+                  Ophir Frieder and
+                  David A. Grossman and
+                  David D. Lewis and
+                  Abdur Chowdhury and
+                  Aleksander Kolcz},
+  editor       = {Ricardo A. Baeza{-}Yates and
+                  Nivio Ziviani and
+                  Gary Marchionini and
+                  Alistair Moffat and
+                  John Tait},
+  title        = {Automatic web query classification using labeled and unlabeled training
+                  data},
+  booktitle    = {{SIGIR} 2005: Proceedings of the 28th Annual International {ACM} {SIGIR}
+                  Conference on Research and Development in Information Retrieval, Salvador,
+                  Brazil, August 15-19, 2005},
+  pages        = {581--582},
+  publisher    = {{ACM}},
+  year         = {2005},
+  url          = {https://doi.org/10.1145/1076034.1076138},
+  doi          = {10.1145/1076034.1076138},
+}
+
+@article{beitzel:2007,
+  author       = {Steven M. Beitzel and
+                  Eric C. Jensen and
+                  David D. Lewis and
+                  Abdur Chowdhury and
+                  Ophir Frieder},
+  title        = {Automatic classification of Web queries using very large unlabeled
+                  query logs},
+  journal      = {{ACM} Trans. Inf. Syst.},
+  volume       = {25},
+  number       = {2},
+  pages        = {9},
+  year         = {2007},
+  url          = {https://doi.org/10.1145/1229179.1229183},
+  doi          = {10.1145/1229179.1229183},
+}
+
+
+
+@inproceedings{guo:2009,
+  author       = {Jiafeng Guo and
+                  Gu Xu and
+                  Xueqi Cheng and
+                  Hang Li},
+  editor       = {James Allan and
+                  Javed A. Aslam and
+                  Mark Sanderson and
+                  ChengXiang Zhai and
+                  Justin Zobel},
+  title        = {Named entity recognition in query},
+  booktitle    = {Proceedings of the 32nd Annual International {ACM} {SIGIR} Conference
+                  on Research and Development in Information Retrieval, {SIGIR} 2009,
+                  Boston, MA, USA, July 19-23, 2009},
+  pages        = {267--274},
+  publisher    = {{ACM}},
+  year         = {2009},
+  url          = {https://doi.org/10.1145/1571941.1571989},
+  doi          = {10.1145/1571941.1571989},
+}
+
+
+
+@inproceedings{zhang:2015,
+  author       = {Jingyuan Zhang and
+                  Luo Jie and
+                  Altaf Rahman and
+                  Sihong Xie and
+                  Yi Chang and
+                  Philip S. Yu},
+  editor       = {James Bailey and
+                  Alistair Moffat and
+                  Charu C. Aggarwal and
+                  Maarten de Rijke and
+                  Ravi Kumar and
+                  Vanessa Murdock and
+                  Timos K. Sellis and
+                  Jeffrey Xu Yu},
+  title        = {Learning Entity Types from Query Logs via Graph-Based Modeling},
+  booktitle    = {Proceedings of the 24th {ACM} International Conference on Information
+                  and Knowledge Management, {CIKM} 2015, Melbourne, VIC, Australia,
+                  October 19 - 23, 2015},
+  pages        = {603--612},
+  publisher    = {{ACM}},
+  year         = {2015},
+  url          = {https://doi.org/10.1145/2806416.2806498},
+  doi          = {10.1145/2806416.2806498},
+}
+
+@inproceedings{lin:2012,
+  author       = {Thomas Lin and
+                  Patrick Pantel and
+                  Michael Gamon and
+                  Anitha Kannan and
+                  Ariel Fuxman},
+  editor       = {Alain Mille and
+                  Fabien Gandon and
+                  Jacques Misselis and
+                  Michael Rabinovich and
+                  Steffen Staab},
+  title        = {Active objects: actions for entity-centric search},
+  booktitle    = {Proceedings of the 21st World Wide Web Conference 2012, {WWW} 2012,
+                  Lyon, France, April 16-20, 2012},
+  pages        = {589--598},
+  publisher    = {{ACM}},
+  year         = {2012},
+  url          = {https://doi.org/10.1145/2187836.2187916},
+  doi          = {10.1145/2187836.2187916},
+}
+
+@inproceedings{rose:2004,
+  author       = {Daniel E. Rose and
+                  Danny Levinson},
+  editor       = {Stuart I. Feldman and
+                  Mike Uretsky and
+                  Marc Najork and
+                  Craig E. Wills},
+  title        = {Understanding user goals in web search},
+  booktitle    = {Proceedings of the 13th international conference on World Wide Web,
+                  {WWW} 2004, New York, NY, USA, May 17-20, 2004},
+  pages        = {13--19},
+  publisher    = {{ACM}},
+  year         = {2004},
+  url          = {https://doi.org/10.1145/988672.988675},
+  doi          = {10.1145/988672.988675},
+}
+
+@article{li:2022,
+  author       = {Jing Li and
+                  Aixin Sun and
+                  Jianglei Han and
+                  Chenliang Li},
+  title        = {A Survey on Deep Learning for Named Entity Recognition},
+  journal      = {{IEEE} Transactions On Knowledge Data Engineering},
+  volume       = {34},
+  number       = {1},
+  pages        = {50--70},
+  year         = {2022},
+  url          = {https://doi.org/10.1109/TKDE.2020.2981314},
+  doi          = {10.1109/TKDE.2020.2981314},
+}
+
+@inproceedings{shokouhi:2011,
+  author       = {Milad Shokouhi},
+  editor       = {Wei{-}Ying Ma and
+                  Jian{-}Yun Nie and
+                  Ricardo Baeza{-}Yates and
+                  Tat{-}Seng Chua and
+                  W. Bruce Croft},
+  title        = {Detecting Seasonal Queries by Time-Series Analysis},
+  booktitle    = {Proceeding of the 34th International {ACM} {SIGIR} Conference on Research
+                  and Development in Information Retrieval, {SIGIR} 2011, Beijing, China,
+                  July 25-29, 2011},
+  pages        = {1171--1172},
+  publisher    = {{ACM}},
+  year         = {2011},
+  url          = {https://doi.org/10.1145/2009916.2010104},
+  doi          = {10.1145/2009916.2010104},
+}
+
+@inproceedings{chien:2005,
+  author       = {Steve Chien and
+                  Nicole Immorlica},
+  editor       = {Allan Ellis and
+                  Tatsuya Hagino},
+  title        = {Semantic Similarity between Search Engine Queries using Temporal Correlation},
+  booktitle    = {Proceedings of the 14th international conference on World Wide Web,
+                  {WWW} 2005, Chiba, Japan, May 10-14, 2005},
+  pages        = {2--11},
+  publisher    = {{ACM}},
+  year         = {2005},
+  url          = {https://doi.org/10.1145/1060745.1060752},
+  doi          = {10.1145/1060745.1060752},
+}
+
+@inproceedings{behnen:2020,
+  author       = {Philipp Behnen and
+                  Ren{\'{e}} Ke{\ss}ler and
+                  Felix Kruse and
+                  Jorge Marx G{\'{o}}mez and
+                  Jan Schoenmakers and
+                  Sergej Zerr},
+  editor       = {Irena Koprinska and
+                  Michael Kamp and
+                  Annalisa Appice and
+                  Corrado Loglisci and
+                  Luiza Antonie and
+                  Albrecht Zimmermann and
+                  Riccardo Guidotti and
+                  {\"{O}}zlem {\"{O}}zg{\"{o}}bek and
+                  Rita P. Ribeiro and
+                  Ricard Gavald{\`{a}} and
+                  Jo{\~{a}}o Gama and
+                  Linara Adilova and
+                  Yamuna Krishnamurthy and
+                  Pedro M. Ferreira and
+                  Donato Malerba and
+                  Ib{\'{e}}ria Medeiros and
+                  Michelangelo Ceci and
+                  Giuseppe Manco and
+                  Elio Masciari and
+                  Zbigniew W. Ras and
+                  Peter Christen and
+                  Eirini Ntoutsi and
+                  Erich Schubert and
+                  Arthur Zimek and
+                  Anna Monreale and
+                  Przemyslaw Biecek and
+                  Salvatore Rinzivillo and
+                  Benjamin Kille and
+                  Andreas Lommatzsch and
+                  Jon Atle Gulla},
+  title        = {Experimental Evaluation of Scale, and Patterns of Systematic Inconsistencies
+                  in Google Trends Data},
+  booktitle    = {{ECML} {PKDD} 2020 Workshops - Workshops of the European Conference
+                  on Machine Learning and Knowledge Discovery in Databases {(ECML} {PKDD}
+                  2020): SoGood 2020, {PDFL} 2020, {MLCS} 2020, {NFMCP} 2020, {DINA}
+                  2020, {EDML} 2020, {XKDD} 2020 and {INRA} 2020, Ghent, Belgium, September
+                  14-18, 2020, Proceedings},
+  series       = {Communications in Computer and Information Science},
+  volume       = {1323},
+  pages        = {374--384},
+  publisher    = {Springer},
+  year         = {2020},
+  url          = {https://doi.org/10.1007/978-3-030-65965-3\_25},
+  doi          = {10.1007/978-3-030-65965-3\_25},
+}
+
+@article{zhao:2022,
+  author       = {Wayne Xin Zhao and
+                  Jing Liu and
+                  Ruiyang Ren and
+                  Ji{-}Rong Wen},
+  title        = {Dense Text Retrieval based on Pretrained Language Models: {A} Survey},
+  journal      = {CoRR},
+  volume       = {abs/2211.14876},
+  year         = {2022},
+  url          = {https://doi.org/10.48550/arXiv.2211.14876},
+  doi          = {10.48550/ARXIV.2211.14876},
+  eprinttype    = {arXiv},
+  eprint       = {2211.14876},
+}
+
+@inproceedings{reimers:2019,
+    title = "Sentence-{BERT}: Sentence Embeddings using {S}iamese {BERT}-Networks",
+    author = "Reimers, Nils  and
+      Gurevych, Iryna",
+    editor = "Inui, Kentaro  and
+      Jiang, Jing  and
+      Ng, Vincent  and
+      Wan, Xiaojun",
+    booktitle = "Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing and the 9th International Joint Conference on Natural Language Processing (EMNLP-IJCNLP)",
+    month = nov,
+    year = "2019",
+    address = "Hong Kong, China",
+    publisher = "Association for Computational Linguistics",
+    url = "https://aclanthology.org/D19-1410/",
+    doi = "10.18653/v1/D19-1410",
+    pages = "3982--3992",
 }
